# WorklogAnalytics

./: .gitignore  pyproject.toml
config/: activity_groups.json  jira.json  project_aliases.json  projects.json  reports.json  tag_aliases.json
src/custom/hpgds/: constants.py  main.py
src/custom/hpgds/calculators/: employee_forecast_builder.py
src/custom/hpgds/configs/: forecast.json  studio_groups.json
src/custom/hpgds/excel/: workbook_builder.py
src/custom/hpgds/loaders/: forecast_loader.py
src/custom/hpgds/models/: employee_forecast.py  forecast_request.py  forecast_result.py
src/custom/hpgds/reports/: employee_effort_by_studio.py  executive_summary.py  final_studio_breakdown.py  (+10 more)
src/worklog_analytics/: app.py  engine.py  main.py
src/worklog_analytics/classifiers/: activity_classifier.py  project_classifier.py  project_helper.py
src/worklog_analytics/loaders/: config_loader.py  excel_loader.py  worklog_mapper.py
src/worklog_analytics/models/: analysis_context.py  date_range.py  validation_issue.py  worklog.py
src/worklog_analytics/parsers/: description_parser.py  tag_parser.py
src/worklog_analytics/reports/: console_renderer.py  debug_report_runner.py  excel_renderer.py  excel_writers.py  matrix_builder.py  matrix_printer.py  models.py  report_builder.py  report_filter.py  report_printer.py  report_runner.py  report_writer.py  table_printer.py  workbook_renderer.py
src/worklog_analytics/sources/: date_range_picker.py  jira_downloader.py  source_selector.py
src/worklog_analytics/validators/: worklog_validator.py
test/: test_parser.py
(+8 files in other folders)
