[project]
name = "workloganalytics"
version = "0.1.0"
description = "Worklog Analytics"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "typer>=0.26.7",
    "xlrd>=2.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worklog_analytics"]
